# LangChef

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY_REPORT.md  docker-compose.yml  package-lock.json  package.json  test.csv  test2.csv  test_upload.html  test_upload.js  test_users2.csv  update-docker-agent-builder.sh
agent-api/: Dockerfile  README.md  package.json  server.js
backend/: .env.example  .uvrc  Dockerfile.dev  README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements.txt  test_app.py
backend/api/models/: __init__.py  tokens.py
backend/api/routes/: __init__.py  auth.py  chats.py  datasets.py  experiments.py  metrics.py  models.py  prompts.py  traces.py
backend/api/schemas/: __init__.py  auth.py  dataset.py  experiment.py  prompt.py  trace.py
backend/core/: __init__.py  logging.py
backend/docs/: auth_api.md  aws_credentials_implementation.md  aws_sso_setup.md
backend/migrations/: env.py
backend/migrations/versions/: add_aws_credentials.py  add_chat_history_tables.py  add_column_mapping_and_uuid.py  add_user_model.py  initial_migration.py  update_datasets_table.py
backend/models/: __init__.py  base.py  chat.py  dataset.py  experiment.py  prompt.py  trace.py  user.py
backend/scripts/: apply_migrations.py  create_migration.py  dev.py  init_db.py  run_migrations.py  test_aws_credentials.py  test_aws_sso.py  update_lock.sh
backend/services/: auth_service.py  auth_service.py.bak  auth_service_fixed.py  llm_service.py
backend/utils/: __init__.py  config.py  database.py
docs/: README.md
(+156 files in other folders)
