[project]
name = "langchef-backend"
version = "0.1.0"
description = "Backend for langchef"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "asyncpg==0.28.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "openai==1.2.4",
    "tiktoken==0.5.1",
    "boto3==1.28.64",
    "httpx==0.25.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "email-validator==2.1.0.post1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.10.1",
    "isort==5.12.0",
    "mypy==1.6.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 